3.4
	+ Updated EBox::Users::Model::Password to use
	  EBox::Usercorner::updateSessionPassword method
	+ Added local apparmor profile for mysqld
	+ Stop changing users and contacts' cn field on object edition, allowed to
	  edit the displayName field, just as Windows does
	+ Disable OpenLDAP users sync in favor of Samba AD replication
	+ Avoid warning when checking whether we are in the usercorner
	+ Updated to use Plack / PSGI instead of mod_perl
	+ Updated to use the new haproxy API
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Fixed soap.conf for apache 2.4
	+ Depend on apache2-utils, required to run htpasswd
	+ Set version to 3.4
	+ Updated cloud sync to ignore any change done in cloud to internal users
	  or groups
	+ Fixed EBox::CloudSync::Slave to sync uid and gid numbers on user update
	  and added unit tests for it
	+ Added EBox::Users::Group::setInternal method
	+ Allow to use lazy flag with EBox::Users::User::setInternal
	+ Added unit tests for cloud sync code
	+ Check available IP addresses when enable module
	+ Added lock to cloud-sync script
	+ Better integration of edit groups for mail group aliases
	+ Update group icon when type of group changes
	+ Implement _preModifyUser on LdapUserBase
	+ Throw exceptions on EBox::USers::LdapObject::get when entry not exists
	+ Fixed regression in LDAP info page for external AD mode
	+ Print slave-sync output to zentyal.log instead of stdout
	+ Fixed excesive restrictive validation of external AD password in wizard
3.3
	+ Forbid to create OUs inside Users, Groups or Computer OUs
	  because we not support them when Samba is enabled
	+ Forbid and print specific  error message when trying to put two
	  objects with the same CN in the same container
	+ Switch from Error to TryCatch for exception handling
	+ Remove useless warning when deleting a user or group with offer 2013
	+ Show system but not internal groups in user edition form